--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: $APP_NAME
     spec:
       imagePullSecrets:
-        - name: my-registry-key
+        - name: aws-ecr-key
       containers:
         - name: $APP_NAME
           image: $IMAGE_REPO:$IMAGE_NAME
