--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>com.example</groupId>
     <artifactId>java-maven-app</artifactId>
     <version>1.1.5</version>
-
+<properties>
+   <maven.compiler.source>1.6</maven.compiler.source>
+   <maven.compiler.target>1.6</maven.compiler.target>
+ </properties>
     <build>
         <plugins>
             <plugin>
